# dealii-slod

./: .gitignore  CMakeLists.txt  Elasticity.prm  README  ScalarDiffusion.prm  parameters.prm
app/: main.cc  main_Diffusion.cc  main_Elasticity.cc
include/: Diffusion.h  Elasticity.h  LOD.h  LODscalar.h  LODtools.h  LODvector.h  slod.h
input/: README.MD  diffusion_nostab.prm  diffusion_stab.json  diffusion_stab.prm  elasticity_nostab.json  elasticity_stab.json  elasticity_stab.prm  vdiffusion_nostab.json  vdiffusion_stab.json
scripts/: indent
source/: LOD.cc  LODscalar.cc  LODvector.cc  slod.cc
tests/: LOD_assembly.cc  MWE.cc  Poisson_LOD_Example.cc  Poisson_LOD_Example.output  assembly_01.cc  assembly_01.output  assembly_02.cc  assembly_02.output  assembly_03.cc  create_mesh_from_cells_01.cc  create_mesh_from_cells_01.output  create_patch_01.cc  create_patch_01.output  fe_q_iso_q1_01.cc  fe_q_iso_q1_01.output  fe_q_iso_q1_02.cc  fe_q_iso_q1_02.output  mv_dot_01.cc  mv_solve_01.cc  mv_solve_02.cc  mv_solve_03.cc  parallel_assembly.cc  parallel_assembly.output  projection_01.cc  projection_02.cc  setup_basis_01.cc  setup_basis_01.output  setup_basis_02.cc  setup_basis_02.output  solve_poisson_problem_on_patch_01.cc  solve_poisson_problem_on_patch_01.output  util.h
